# Computacion-grafica

./: README.md
Control_Practico/: main.cpp  matrix.cpp
Examen/: CMakeCache.txt  CMakeLists.txt  Makefile  TRIANGLE  cmake_install.cmake
Examen/src/: main.cpp  matrix.cpp
FINAL-CG-PRACTiCAP/CG-PRACTiCAP/: principal.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
GLFW_GLAD_GLUT_GLEW_cmake_project/src/: CMakeLists.txt
GLFW_GLAD_GLUT_GLEW_cmake_project/src/CG-PRACTiCAP/: CMakeLists.txt  mytest1_glfw.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Cubo-Rubick/: CMakeLists.txt
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Ejercicio_LookAt/: CMakeLists.txt  main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Ejercicio_LookAt/shaders/: nop.vert
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Projection_NatteRobbins/: CMakeLists.txt  projection.c
GLFW_GLAD_GLUT_GLEW_cmake_project/src/RUBIK/: mytest1_glfw.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Rubick/: CMakeLists.txt  main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Rubick/shaders/: nop.frag
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Rubik_Solver/: CMakeLists.txt  Display.cpp  Display.h  Solver.cpp  main.cpp  shader.fs  shader.vs
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Textura/: CMakeLists.txt  main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Tutorial_01/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Tutorial_02/: CMakeLists.txt  main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Tutorial_03/: 3.3.shader.fs  CMakeLists.txt  main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Tutorial_04/: 3.3.shader.vs  CMakeLists.txt  main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Tutorial_05/: CMakeLists.txt  geometry3.h  mytest3.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/mytest1_glfw/: CMakeLists.txt  mytest1_glfw.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/mytest1_glfwGLEW/: CMakeLists.txt  mytest1_glfw.cpp  shader.h  shaders.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/mytest1_glut/: CMakeLists.txt  mytest1_glut.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/rubiks-cube-cracker/: CMakeLists.txt  rubiksCube.cpp
Lab1/: makefile
Lab1/Window/: CMakeLists.txt  WINDOW
Lab1/Window/libraries/glfw/: Makefile  cmake_install.cmake
Lab1/Window/libraries/glfw/src/: Makefile  cmake_install.cmake
Lab1/window/: CMakeLists.txt  main
Lab2/src/: main.cpp
Lab3/: CMakeLists.txt
Lab3/src/: main.cpp
Lab4/: CMakeLists.txt
SOLVER FINAL/: README.md
SOLVER UNIDO/: README.md
Sierpinski_triangle/: CMakeLists.txt
window/: CMakeLists.txt
(+49 files in other folders)
