#add_subdirectory( Tutorial_01 )
#add_subdirectory( Tutorial_02 )
#add_subdirectory( Tutorial_03 )
#add_subdirectory( Tutorial_04 )
#add_subdirectory( Tutorial_05 )
#add_subdirectory( mytest1_glfw )
#add_subdirectory( mytest1_glut )
#add_subdirectory( Ejercicio_LookAt )
#add_subdirectory( Projection_NatteRobbins  )
#add_subdirectory( mytest1_glfwGLEW )
add_subdirectory( CG-PRACTiCAP )
